src/objects/c2g__fflib_BatchProcess__c.object
<CustomObject>
    <fields>
        <fullName>c2g__ApexJobClassName__c</fullName>
        <label>Apex Job Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchControlRecordID__c</fullName>
        <label>Batch Control Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConcurrencyModeUniqueID__c</fullName>
        <label>Concurrency Mode Unique ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CurrentChainIndex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deprecated: Current Chain Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CurrentChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__FailedRecordID__c</fullName>
        <label>Failed Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FromProgressBar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Progress Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofBatchesinChain__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Chains in Batch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessName__c</fullName>
        <label>Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProgressInformation__c</fullName>
        <label>Progress Information</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__SuccessfulRecordID__c</fullName>
        <label>Successful Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TotalChainNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deprecated: Total Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseDefaultConstructor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Constructor</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Process</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__ApexJobClassName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>c2g__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>